<resources>
    <string name="app_name">Utopia</string>
    <string name="slogan">It\'s not a dream anymore. \n Shop the best from us!</string>
    <string name="welcome">WELCOME</string>
    <string name="signup">SIGN UP</string>
    <string name="signin">SIGN IN</string>
    <string name="signout">Sign out</string>
    <string name="firstn">First Name*</string>
    <string name="lastn">Last Name*</string>
    <string name="email">Email Id</string>
    <string name="username">Username*</string>
    <string name="password">Password*</string>
    <string name="c_password">Confirm Password*</string>
    <string name="reg_success">You have registered Successfully!</string>
    <string name="login_success">You have logged in Successfully!</string>
    <string name="continue_shop">Continue Shopping</string>
    <string name="sure_exit">Do you really want to quit?</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="alert">Warning ! </string>
    <string name="signoutmsg">Do you want to Sign out ?</string>
    <string name="buy">Buy now</string>
    <string name="address">Address</string>
    <string name="newaddress">add new Address</string>
    <string name="pin">Pin Code*</string>
    <string name="locality">Locality / Town * </string>
    <string name="city">City / District* </string>
    <string name="state">State* </string>
    <string name="name">Name* </string>
    <string name="mobile">Mobile No* </string>
    <string name="typeaddress">Type of Address* </string>
    <string name="home">Home</string>
    <string name="work">Office/Commercial</string>
    <string name="checkout">Checkout</string>
    <string name="cash">Cash On Delivery</string>
    <string name="payment">Mode of Payment*</string>
    <string name="thanks">Your order has been Successfully Confirmed.\nThank You for Shopping with Us !</string>

    <string name="cat">Shop by Category</string>
    <string name="cat1">Men\'s Topwear</string>
    <string name="cat2">Men\'s Bottomwear</string>
    <string name="cat3">Men\'s Footwear</string>
    <string name="cat4">Men\'s Accessories</string>
    <string name="cat5">Boy\'s Clothing</string>
    <string name="cat6">Women\'s Topwear</string>
    <string name="cat7">Women\'s Bottomwear</string>
    <string name="cat8">Women\'s Footwear</string>
    <string name="cat9">Women\'s Accessories</string>
    <string name="cat10">Girl\'s Clothing</string>
</resources>
