<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Category_menu">


    <ScrollView
        android:layout_width="368dp"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="56dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cat"
                android:textAlignment="center"
                android:textColor="#000"
                android:focusedByDefault="true"
                android:textSize="30dp" />

            <Button
                android:id="@+id/category1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="10dp"
                android:elevation="5dp"
                android:text="@string/cat1"
                android:textStyle="bold" />

            <Button
                android:id="@+id/category2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="10dp"
                android:elevation="5dp"
                android:text="@string/cat2"
                android:textStyle="bold" />

            <Button
                android:id="@+id/category3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="10dp"
                android:elevation="5dp"
                android:text="@string/cat3"
                android:textStyle="bold" />

            <Button
                android:id="@+id/category4"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="10dp"
                android:elevation="5dp"
                android:text="@string/cat4"
                android:textStyle="bold" />

            <Button
                android:id="@+id/category5"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="10dp"
                android:elevation="5dp"
                android:text="@string/cat5"
                android:textStyle="bold" />

            <Button
                android:id="@+id/category6"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="10dp"
                android:elevation="5dp"
                android:text="@string/cat10"
                android:textStyle="bold" />

            <Button
                android:id="@+id/category7"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="10dp"
                android:elevation="5dp"
                android:text="@string/cat6"
                android:textStyle="bold" />

            <Button
                android:id="@+id/category8"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="10dp"
                android:elevation="5dp"
                android:text="@string/cat7"
                android:textStyle="bold" />

            <Button
                android:id="@+id/category9"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="10dp"
                android:elevation="5dp"
                android:text="@string/cat8"
                android:textStyle="bold" />

            <Button
                android:id="@+id/category10"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="10dp"
                android:text="@string/cat9"
                android:elevation="5dp"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>