<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Category_menu">


    <ScrollView
        android:layout_width="368dp"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="56dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/et_back"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignLeft="@+id/et_item_name"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/et_item_name"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_action_back"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/shipheader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:padding="5dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newaddress"
                android:text="@string/newaddress"
                android:textAllCaps="true"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:textColor="@color/gray"/>

            <EditText
                android:id="@+id/pincode"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="6"
                android:hint = "@string/pin"
                android:layout_margin="10dp"
                android:inputType="number" />
            <EditText
                android:id="@+id/locality"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:hint = "@string/locality" />
            <EditText
                android:id="@+id/city"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:hint = "@string/city" />
            <EditText
                android:id="@+id/state"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="10dp"
                android:hint = "@string/state" />
            <EditText
                android:id="@+id/name"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:hint = "@string/name" />
            <EditText
                android:id="@+id/mobile"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="10"
                android:hint = "@string/mobile"
                android:layout_margin="10dp"
                android:inputType="number" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/typeadd"
                android:text="@string/typeaddress"
                android:textAllCaps="true"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:textColor="@color/gray"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:id="@+id/rb1"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/home"
                    android:text="@string/home"
                    android:textAllCaps="true"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:textColor="@color/gray"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:id="@+id/rb2"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/work"
                    android:text="@string/work"
                    android:textAllCaps="true"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:textColor="@color/gray"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/payment"
                android:text="@string/payment"
                android:textAllCaps="true"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:textColor="@color/gray"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:id="@+id/rb3"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cash"
                    android:text="@string/cash"
                    android:textAllCaps="true"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:textColor="@color/gray"/>
            </LinearLayout>

            <Button
                android:id="@+id/checkout"
                android:layout_width="338dp"
                android:layout_height="wrap_content"
                android:text="@string/checkout"
                android:layout_margin="15dp"
                android:background="@color/lightblue"/>

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>