<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:background="@drawable/hdwall">

    <TextView
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#e5061139"
        android:fontFamily="sans-serif"
        android:text="@string/signin"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etlusername"
        android:layout_width="350dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:background="@color/white"
        android:ems="17"
        android:hint="@string/username"
        android:padding="5dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/etlpassword"
        android:layout_width="350dp"
        android:layout_height="42dp"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:ems="17"
        android:textSize="17sp"
        android:padding="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"/>


    <ImageButton
        android:id="@+id/etback"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/lightblue"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_action_back"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/btn_login_wel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="133dp"
        android:text="@string/signin"
        android:background="@color/lightblue"
        android:textStyle="bold"
        android:fontFamily="serif-monospace" />

</RelativeLayout>