<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/hdwall">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etwelcome"
        android:layout_marginTop="120dp"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textSize="30sp"
        android:textStyle="normal"
        android:layout_alignParentLeft="true" />
    <Button
        android:id="@+id/etlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="187dp"
        android:background="@color/lightblue"
        android:text="@string/signin"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:fontFamily="serif-monospace" />

    <Button
        android:id="@+id/etsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="109dp"
        android:background="@color/lightblue"
        android:text="@string/signup"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:fontFamily="serif-monospace"/>
</RelativeLayout>